# elBandolero

./: .gitignore  .replit  README.md  admin.py  keepalive.py  listas.py  lopes.json  main.py  pyproject.toml  quotes.json  racist_score.json
cogs/: admin.py  events.py  fun.py  reddit.py
